--- a/.github/workflows/postman-execution.yml
+++ b/.github/workflows/postman-execution.yml
@@ -25,3 +25,17 @@ jobs:
       # Make directory to upload the test results
       - name: Make Directory for results
         run: mkdir -p testResults
+
+
+      # Run the POSTMAN collection
+      - name: Run POSTMAN collection
+        run: |
+          newman run Petstore.postman_collection.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html --reporter-htmlextra-darkTheme  > testResults/runreport1.html
+
+
+      # Upload the contents of Test Results directory to workspace
+      - name: Output the run Details
+        uses: actions/upload-artifact@v2
+        with:
+          name: RunReports
+          path: testResults 
