--- a/.github/workflows/postman-execution.yml
+++ b/.github/workflows/postman-execution.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Install newman
         run: |
           npm install -g newman
+          npm install -g newman-reporter-html
           npm install -g newman-reporter-htmlextra
 
 
