--- a/.github/workflows/apidog-execution.yml
+++ b/.github/workflows/apidog-execution.yml
@@ -12,8 +12,16 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v4
         with:
-          node-version: "18.x"
+          node-version: "22"
 
+      # Caching the NODE and Apidog CLI
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-global-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-global-
 
       # Install the apidog command line utility
       - name: Install Apidog CLI
