--- a/.github/workflows/apidog-execution.yml
+++ b/.github/workflows/apidog-execution.yml
@@ -28,6 +28,15 @@ jobs:
         run: |
           npm install -g apidog-cli
 
+      # Caching the NODE and Apidog CLI
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-global-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-global-
+
       # Run the apidog CLI collection
       - name: Run the apidog CLI collection
         run: |
